[package]
name = "schc-tap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
pnet = "0.35.0"
tun-rs = "2.7.4"
socket2 = { version = "0.6.1", features = ["all"] }
bitvec = "1.0.1"
leb128 = "0.2.5"
clap = { version = "4.5.51", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"

[dev-dependencies]
hex = "0.4.3"
